Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -579,6 +579,33 @@
     ]
   },
   {
+    "title": "Thai nhi bị bất thường động mạch",
+    "content": "Bài viết nói về trường hợp một thai nhi 26 tuần tuổi có bất thường ở động mạch chủ với 4 nhánh mạch máu, trong đó một nhánh lạc chỗ. Mặc dù đây là dị tật bẩm sinh hiếm gặp, bác sĩ cho biết bé gái sinh ra vẫn có thể phát triển khỏe mạnh và không có bất thường nghiêm trọng nào khác. Thai phụ sẽ cần theo dõi chặt chẽ trong thai kỳ và thực hiện các siêu âm cần thiết để đảm bảo sự phát triển của thai nhi.",
+    "link": "https://vnexpress.net/thai-nhi-bi-bat-thuong-dong-mach-4863603.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Thai nhi có bất thường động mạch chủ có thể sinh ra khỏe mạnh không?",
+    "answers": [
+      {
+        "text": "Có, thai nhi vẫn có thể sinh ra khỏe mạnh.",
+        "correct": true
+      },
+      {
+        "text": "Không, thai nhi sẽ bị nguy hiểm đến tính mạng.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ nếu được phẫu thuật ngay sau sinh.",
+        "correct": false
+      },
+      {
+        "text": "Không, thai nhi sẽ gặp nhiều vấn đề sức khỏe nghiêm trọng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bị sán ký sinh chi chít khắp cơ thể",
     "content": "Hai bệnh nhân 47 và 71 tuổi ở Phú Thọ đã được phát hiện bị sán ký sinh chi chít khắp cơ thể, với các triệu chứng đau đầu kéo dài và co giật. Kết quả chụp CT cho thấy tổn thương do ấu trùng sán lợn ở hệ thần kinh trung ương và các bộ phận khác trên cơ thể. Bác sĩ cảnh báo rằng bệnh này dễ bị nhầm lẫn với các bệnh lý thần kinh khác, và khuyến cáo người dân cần tuân thủ vệ sinh an toàn thực phẩm để phòng ngừa.",
     "link": "https://vnexpress.net/bi-san-ky-sinh-chi-chit-khap-co-the-4863541.html",
@@ -601,6 +628,33 @@
       },
       {
         "text": "Mệt mỏi và chóng mặt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tổng thống Mỹ Donald Trump sắp ký sắc lệnh xóa bỏ Bộ Giáo dục Mỹ?",
+    "content": "Tổng thống Mỹ Donald Trump được cho là sẽ ký sắc lệnh xóa bỏ Bộ Giáo dục Mỹ vào ngày 20/3. Sắc lệnh này sẽ chỉ đạo Bộ trưởng Giáo dục Linda McMahon thực hiện các biện pháp cần thiết để chuyển giao quyền kiểm soát giáo dục về cho các tiểu bang. Tuy nhiên, kế hoạch này vẫn đang gây tranh cãi và cần sự chấp thuận từ Quốc hội Mỹ. Đảng Cộng hòa từ lâu đã phản đối Bộ Giáo dục vì cho rằng bộ này hoạt động không hiệu quả và có sự lãng phí.",
+    "link": "https://dantri.com.vn/giao-duc/tong-thong-my-donald-trump-sap-ky-sac-lenh-xoa-bo-bo-giao-duc-my-20250320105815892.htm",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Tổng thống Trump có kế hoạch gì đối với Bộ Giáo dục Mỹ?",
+    "answers": [
+      {
+        "text": "Ông Trump sắp ký sắc lệnh xóa bỏ Bộ Giáo dục Mỹ.",
+        "correct": true
+      },
+      {
+        "text": "Ông Trump muốn tăng cường ngân sách cho Bộ Giáo dục Mỹ.",
+        "correct": false
+      },
+      {
+        "text": "Ông Trump sẽ cải cách chương trình giảng dạy của Bộ Giáo dục.",
+        "correct": false
+      },
+      {
+        "text": "Ông Trump dự định bổ nhiệm một Bộ trưởng mới cho Bộ Giáo dục.",
         "correct": false
       }
     ]
@@ -1622,33 +1676,6 @@
     ]
   },
   {
-    "title": "Hãng xe Trung Quốc phát trực tiếp thử nghiệm va chạm",
-    "content": "Hãng xe Trung Quốc Lynk & Co đã phát trực tiếp thử nghiệm va chạm chiếc SUV hybrid Lynk & Co 900, nhằm đánh giá mức độ an toàn của hàng ghế thứ ba. Trong bài kiểm tra, xe phải chịu tác động ở tốc độ 100 km/h, vượt xa tiêu chuẩn C-NCAP. Kết quả cho thấy cấu trúc xe vẫn giữ nguyên và đủ không gian sống sót cho hành khách. Đây là một động thái nhằm nâng cao nhận thức về an toàn cho những hành khách ngồi ở hàng ghế thứ ba, nơi có tỷ lệ thương tích cao trong các vụ va chạm.",
-    "link": "https://vnexpress.net/hang-xe-trung-quoc-phat-truc-tiep-thu-nghiem-va-cham-4863218.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Lynk & Co 900 đã trải qua bài kiểm tra an toàn gì?",
-    "answers": [
-      {
-        "text": "Thử nghiệm va chạm",
-        "correct": true
-      },
-      {
-        "text": "Thử nghiệm phanh",
-        "correct": false
-      },
-      {
-        "text": "Thử nghiệm tiêu hao nhiên liệu",
-        "correct": false
-      },
-      {
-        "text": "Thử nghiệm khí thải",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Làm bảo vệ 10 năm ở trường đại học, người đàn ông trở thành luật sư",
     "content": "Liu Zheng, một người đàn ông từng làm bảo vệ tại Đại học Bắc Kinh trong suốt 10 năm, đã vượt qua khó khăn để trở thành luật sư. Xuất phát từ một gia đình nông thôn với điều kiện kinh tế khó khăn, Liu đã quyết tâm theo đuổi ước mơ của mình bằng cách dự thính các lớp học luật và tự học. Sau nhiều nỗ lực, cuối cùng anh đã thi đỗ kỳ thi sát hạch luật sư và hiện đang làm việc tại một công ty luật lớn ở Bắc Kinh, trở thành một nguồn cảm hứng cho nhiều người.",
     "link": "https://dantri.com.vn/giao-duc/lam-bao-ve-10-nam-o-truong-dai-hoc-nguoi-dan-ong-tro-thanh-luat-su-20250319095138233.htm",
@@ -1675,6 +1702,33 @@
       },
       {
         "text": "Nhà báo",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hãng xe Trung Quốc phát trực tiếp thử nghiệm va chạm",
+    "content": "Hãng xe Trung Quốc Lynk & Co đã phát trực tiếp thử nghiệm va chạm chiếc SUV hybrid Lynk & Co 900, nhằm đánh giá mức độ an toàn của hàng ghế thứ ba. Trong bài kiểm tra, xe phải chịu tác động ở tốc độ 100 km/h, vượt xa tiêu chuẩn C-NCAP. Kết quả cho thấy cấu trúc xe vẫn giữ nguyên và đủ không gian sống sót cho hành khách. Đây là một động thái nhằm nâng cao nhận thức về an toàn cho những hành khách ngồi ở hàng ghế thứ ba, nơi có tỷ lệ thương tích cao trong các vụ va chạm.",
+    "link": "https://vnexpress.net/hang-xe-trung-quoc-phat-truc-tiep-thu-nghiem-va-cham-4863218.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Lynk & Co 900 đã trải qua bài kiểm tra an toàn gì?",
+    "answers": [
+      {
+        "text": "Thử nghiệm va chạm",
+        "correct": true
+      },
+      {
+        "text": "Thử nghiệm phanh",
+        "correct": false
+      },
+      {
+        "text": "Thử nghiệm tiêu hao nhiên liệu",
+        "correct": false
+      },
+      {
+        "text": "Thử nghiệm khí thải",
         "correct": false
       }
     ]
@@ -1854,33 +1908,6 @@
     ]
   },
   {
-    "title": "Mất cơ hội chữa khỏi ung thư vì khám sai nơi",
-    "content": "Ông Thành, 63 tuổi, phát hiện ung thư tuyến tiền liệt giai đoạn muộn do không được tư vấn đúng khi xét nghiệm PSA cao nhưng không được kiểm tra thêm. Mặc dù đã phẫu thuật cắt tuyến tiền liệt, ông phải đối mặt với ung thư tái phát và lựa chọn giữa cắt bỏ tinh hoàn hoặc dùng liệu pháp nội tiết tố tốn kém và có nhiều tác dụng phụ. Nếu được phát hiện sớm, tỷ lệ chữa khỏi ung thư tuyến tiền liệt có thể lên tới 100%, nhưng hiện tại, khoảng 75-80% bệnh nhân đến khám khi đã ở giai đoạn muộn.",
-    "link": "https://vnexpress.net/mat-co-hoi-chua-khoi-ung-thu-vi-kham-sai-noi-4861903.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao ông Thành mất cơ hội chữa khỏi ung thư tuyến tiền liệt?",
-    "answers": [
-      {
-        "text": "Vì không được xét nghiệm PSA khi có chỉ số cao.",
-        "correct": true
-      },
-      {
-        "text": "Vì ông không có triệu chứng rõ ràng.",
-        "correct": false
-      },
-      {
-        "text": "Vì bệnh viện không đủ trang thiết bị.",
-        "correct": false
-      },
-      {
-        "text": "Vì ông không đi khám định kỳ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hai con của Từ Hy Viên vắng mặt trong tang lễ của mẹ",
     "content": "Nữ diễn viên Từ Hy Viên đã qua đời và được an táng tại Nghĩa trang Kim Bảo Sơn ở Đài Loan. Tang lễ của cô diễn ra với sự tham gia của chồng hiện tại và gia đình, nhưng hai con của nữ diễn viên không có mặt. Mẹ kế của các con cho biết không nhận được thông báo về tang lễ, dẫn đến việc hai bé không thể tiễn đưa mẹ. Tình trạng này đã gây ra nhiều tranh cãi trên mạng xã hội.",
     "link": "https://dantri.com.vn/giai-tri/hai-con-cua-tu-hy-vien-vang-mat-trong-tang-le-cua-me-20250319172644395.htm",
@@ -1988,6 +2015,33 @@
       },
       {
         "text": "Territory là mẫu xe mới nhất trên thị trường.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mất cơ hội chữa khỏi ung thư vì khám sai nơi",
+    "content": "Ông Thành, 63 tuổi, phát hiện ung thư tuyến tiền liệt giai đoạn muộn do không được tư vấn đúng khi xét nghiệm PSA cao nhưng không được kiểm tra thêm. Mặc dù đã phẫu thuật cắt tuyến tiền liệt, ông phải đối mặt với ung thư tái phát và lựa chọn giữa cắt bỏ tinh hoàn hoặc dùng liệu pháp nội tiết tố tốn kém và có nhiều tác dụng phụ. Nếu được phát hiện sớm, tỷ lệ chữa khỏi ung thư tuyến tiền liệt có thể lên tới 100%, nhưng hiện tại, khoảng 75-80% bệnh nhân đến khám khi đã ở giai đoạn muộn.",
+    "link": "https://vnexpress.net/mat-co-hoi-chua-khoi-ung-thu-vi-kham-sai-noi-4861903.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao ông Thành mất cơ hội chữa khỏi ung thư tuyến tiền liệt?",
+    "answers": [
+      {
+        "text": "Vì không được xét nghiệm PSA khi có chỉ số cao.",
+        "correct": true
+      },
+      {
+        "text": "Vì ông không có triệu chứng rõ ràng.",
+        "correct": false
+      },
+      {
+        "text": "Vì bệnh viện không đủ trang thiết bị.",
+        "correct": false
+      },
+      {
+        "text": "Vì ông không đi khám định kỳ.",
         "correct": false
       }
     ]
@@ -3338,64 +3392,6 @@
     ]
   },
   {
-    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
-    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
-    "answers": [
-      {
-        "text": "Khó thở và ho khan kéo dài",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu và chóng mặt",
-        "correct": false
-      },
-      {
-        "text": "Nôn mửa và tiêu chảy",
-        "correct": false
-      },
-      {
-        "text": "Mệt mỏi và sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Đau bụng và khó tiêu",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
-    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
-    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
-    "answers": [
-      {
-        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
-        "correct": true
-      },
-      {
-        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
-        "correct": false
-      },
-      {
-        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
-        "correct": false
-      },
-      {
-        "text": "Không cần kiểm tra sức khỏe định kỳ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 đồ uống góp phần tăng cường sinh lý nữ",
     "content": "Bài viết giới thiệu 5 loại đồ uống có lợi giúp tăng cường sinh lý nữ, bao gồm trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ và nước ép lựu. Những đồ uống này chứa nhiều chất chống oxy hóa và vitamin, hỗ trợ cải thiện sức khỏe sinh lý và ổn định nội tiết tố. Bên cạnh việc sử dụng các loại đồ uống này, lối sống lành mạnh như tập thể dục và chế độ ăn uống cân bằng cũng rất quan trọng để nâng cao sức khỏe tổng thể của phụ nữ.",
     "link": "https://vnexpress.net/5-do-uong-gop-phan-tang-cuong-sinh-ly-nu-4863206.html",
@@ -3454,33 +3450,6 @@
     ]
   },
   {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
-    "answers": [
-      {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
-        "correct": true
-      },
-      {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
-        "correct": false
-      },
-      {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
-        "correct": false
-      },
-      {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 mẹo giúp bỏ thuốc lá",
     "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
     "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
@@ -3503,6 +3472,91 @@
       },
       {
         "text": "Không cần phải có sự hỗ trợ từ người khác.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
+    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "answers": [
+      {
+        "text": "Khó thở và ho khan kéo dài",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu và chóng mặt",
+        "correct": false
+      },
+      {
+        "text": "Nôn mửa và tiêu chảy",
+        "correct": false
+      },
+      {
+        "text": "Mệt mỏi và sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng và khó tiêu",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
+    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
+    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
+    "answers": [
+      {
+        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
+        "correct": true
+      },
+      {
+        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
+        "correct": false
+      },
+      {
+        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
+        "correct": false
+      },
+      {
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "answers": [
+      {
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "correct": true
+      },
+      {
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
+        "correct": false
+      },
+      {
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "correct": false
+      },
+      {
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
