--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Thủ tướng: Chậm nhất 31-12 hoàn thành sân bay Long Thành, nếu không sẽ thay người",
+    "content": "Thủ tướng Phạm Minh Chính đã nhấn mạnh rằng sân bay Long Thành phải hoàn thành cơ bản trước ngày 31-12-2025, nếu không sẽ có sự thay đổi nhân sự phụ trách dự án. Ông đã kiểm tra tiến độ và yêu cầu các hạng mục phải được thực hiện đúng thời hạn. Đây là lần thứ 7 Thủ tướng trực tiếp chỉ đạo tiến độ dự án, nhấn mạnh tầm quan trọng của việc kết nối giao thông và hoàn thành các hạng mục liên quan.",
+    "link": "https://tuoitre.vn/thu-tuong-cham-nhat-31-12-hoan-thanh-san-bay-long-thanh-neu-khong-se-thay-nguoi-20250320212852578.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Khi nào sân bay Long Thành phải hoàn thành theo yêu cầu của Thủ tướng?",
+    "answers": [
+      {
+        "text": "Chậm nhất 31-12-2025",
+        "correct": true
+      },
+      {
+        "text": "Trước tháng 6-2025",
+        "correct": false
+      },
+      {
+        "text": "Vào năm 2026",
+        "correct": false
+      },
+      {
+        "text": "Trước tháng 3-2025",
+        "correct": false
+      },
+      {
+        "text": "Không có thời hạn cụ thể",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Doanh nghiệp du lịch lo mất địa danh Mũi Né",
     "content": "Các doanh nghiệp du lịch tại Bình Thuận bày tỏ lo ngại về việc mất địa danh Mũi Né trong quá trình sáp nhập các đơn vị hành chính. Ông Nguyễn Văn Khoa, Chủ tịch Hiệp hội Du lịch Bình Thuận, đã kiến nghị giữ lại tên Mũi Né vì đây là thương hiệu du lịch nổi tiếng, thu hút nhiều du khách quốc tế. Chính quyền địa phương cũng đã xác nhận rằng tên gọi Mũi Né sẽ được duy trì trong tên của đơn vị hành chính mới và trong quy hoạch Khu du lịch quốc gia Mũi Né.",
     "link": "https://vnexpress.net/doanh-nghiep-du-lich-lo-mat-dia-danh-mui-ne-4863914.html",
@@ -2819,33 +2850,6 @@
     ]
   },
   {
-    "title": "Đột quỵ ở trẻ em",
-    "content": "Đột quỵ ở trẻ em là một tình trạng hiếm gặp nhưng có thể gây ra hậu quả nghiêm trọng hơn so với người lớn. Nguyên nhân chủ yếu của đột quỵ ở trẻ em thường liên quan đến các yếu tố bẩm sinh như khuyết tật tim, bệnh lý về tim mạch và rối loạn đông máu. Triệu chứng của đột quỵ ở trẻ em tương tự như ở người lớn, nhưng việc phát hiện sớm có thể khó khăn do trẻ nhỏ không thể diễn đạt cảm giác. Các biện pháp cấp cứu và điều trị kịp thời là rất quan trọng để giảm thiểu di chứng và nâng cao chất lượng sống cho trẻ.",
-    "link": "https://vnexpress.net/dot-quy-o-tre-em-4863558.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Đột quỵ ở trẻ em có nguy hiểm không?",
-    "answers": [
-      {
-        "text": "Có, đột quỵ ở trẻ em có thể gây ra hậu quả nghiêm trọng.",
-        "correct": true
-      },
-      {
-        "text": "Đột quỵ ở trẻ em là một tình trạng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Đột quỵ chỉ xảy ra ở người lớn.",
-        "correct": false
-      },
-      {
-        "text": "Trẻ em không bao giờ bị đột quỵ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Điểm khác thường của Hoàng Thùy Linh khi trở lại sau thời gian \"ở ẩn\"",
     "content": "Hoàng Thùy Linh vừa trở lại sau thời gian dài 'ở ẩn' và nhận được nhiều lời khen ngợi về nhan sắc mặn mà và phong cách ăn mặc mới. Cô tham gia vào các buổi giao lưu với khán giả và phát hành phim tài liệu 'Vietnamese concert: Chúng ta là người Việt Nam'. Trong lần tái xuất này, nữ ca sĩ chọn những bộ trang phục suông rộng, khác hẳn với phong cách gợi cảm trước đây, thể hiện sự thay đổi trong hình ảnh của mình.",
     "link": "https://dantri.com.vn/giai-tri/diem-khac-thuong-cua-hoang-thuy-linh-khi-tro-lai-sau-thoi-gian-o-an-20250320082134475.htm",
@@ -2868,6 +2872,33 @@
       },
       {
         "text": "Cô thường xuyên mặc đồ thể thao.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đột quỵ ở trẻ em",
+    "content": "Đột quỵ ở trẻ em là một tình trạng hiếm gặp nhưng có thể gây ra hậu quả nghiêm trọng hơn so với người lớn. Nguyên nhân chủ yếu của đột quỵ ở trẻ em thường liên quan đến các yếu tố bẩm sinh như khuyết tật tim, bệnh lý về tim mạch và rối loạn đông máu. Triệu chứng của đột quỵ ở trẻ em tương tự như ở người lớn, nhưng việc phát hiện sớm có thể khó khăn do trẻ nhỏ không thể diễn đạt cảm giác. Các biện pháp cấp cứu và điều trị kịp thời là rất quan trọng để giảm thiểu di chứng và nâng cao chất lượng sống cho trẻ.",
+    "link": "https://vnexpress.net/dot-quy-o-tre-em-4863558.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Đột quỵ ở trẻ em có nguy hiểm không?",
+    "answers": [
+      {
+        "text": "Có, đột quỵ ở trẻ em có thể gây ra hậu quả nghiêm trọng.",
+        "correct": true
+      },
+      {
+        "text": "Đột quỵ ở trẻ em là một tình trạng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Đột quỵ chỉ xảy ra ở người lớn.",
+        "correct": false
+      },
+      {
+        "text": "Trẻ em không bao giờ bị đột quỵ.",
         "correct": false
       }
     ]
@@ -3545,28 +3576,28 @@
     ]
   },
   {
-    "title": "Chuyển làn trên đường cao tốc thế nào cho an toàn",
-    "content": "Khi lái xe trên đường cao tốc, việc chuyển làn an toàn là rất quan trọng và cần phải thực hiện đúng cách. Tài xế cần kiểm tra gương chiếu hậu và điểm mù trước khi chuyển làn, đồng thời sử dụng tín hiệu để báo hiệu ý định của mình. Khi đã đảm bảo an toàn, hãy chuyển làn từ từ và giữ khoảng cách với các xe xung quanh để tránh tai nạn.",
-    "link": "https://vnexpress.net/chuyen-lan-tren-duong-cao-toc-the-nao-cho-an-toan-4862664.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để chuyển làn trên đường cao tốc một cách an toàn?",
+    "title": "Bé gái bỏng do nghịch vòi nước nóng lạnh",
+    "content": "Bé Hà, 3 tuổi, đã bị bỏng do nghịch vòi nước nóng lạnh trong khi tắm, dẫn đến bỏng ở lưng và mông. Sau khi được điều trị tại bệnh viện Đa khoa Tâm Anh TP HCM, bé hồi phục tốt sau 4 ngày điều trị với vết thương đã lên da non. Bác sĩ khuyến cáo phụ huynh cần cẩn trọng trong việc phòng ngừa bỏng cho trẻ nhỏ, đồng thời hướng dẫn cách sơ cứu khi trẻ bị bỏng.",
+    "link": "https://vnexpress.net/be-gai-bong-do-nghich-voi-nuoc-nong-lanh-4863556.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé Hà bị bỏng do nguyên nhân gì?",
     "answers": [
       {
-        "text": "Kiểm tra gương và sử dụng tín hiệu trước khi chuyển làn",
+        "text": "Nghịch vòi nước nóng lạnh",
         "correct": true
       },
       {
-        "text": "Chuyển làn ngay mà không cần kiểm tra",
+        "text": "Chơi với lửa",
         "correct": false
       },
       {
-        "text": "Chạy nhanh hơn khi chuyển làn",
+        "text": "Ngã vào bếp",
         "correct": false
       },
       {
-        "text": "Không cần dùng tín hiệu khi chuyển làn",
+        "text": "Ngồi gần bếp lửa",
         "correct": false
       }
     ]
@@ -3599,28 +3630,28 @@
     ]
   },
   {
-    "title": "Bé gái bỏng do nghịch vòi nước nóng lạnh",
-    "content": "Bé Hà, 3 tuổi, đã bị bỏng do nghịch vòi nước nóng lạnh trong khi tắm, dẫn đến bỏng ở lưng và mông. Sau khi được điều trị tại bệnh viện Đa khoa Tâm Anh TP HCM, bé hồi phục tốt sau 4 ngày điều trị với vết thương đã lên da non. Bác sĩ khuyến cáo phụ huynh cần cẩn trọng trong việc phòng ngừa bỏng cho trẻ nhỏ, đồng thời hướng dẫn cách sơ cứu khi trẻ bị bỏng.",
-    "link": "https://vnexpress.net/be-gai-bong-do-nghich-voi-nuoc-nong-lanh-4863556.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bé Hà bị bỏng do nguyên nhân gì?",
+    "title": "Chuyển làn trên đường cao tốc thế nào cho an toàn",
+    "content": "Khi lái xe trên đường cao tốc, việc chuyển làn an toàn là rất quan trọng và cần phải thực hiện đúng cách. Tài xế cần kiểm tra gương chiếu hậu và điểm mù trước khi chuyển làn, đồng thời sử dụng tín hiệu để báo hiệu ý định của mình. Khi đã đảm bảo an toàn, hãy chuyển làn từ từ và giữ khoảng cách với các xe xung quanh để tránh tai nạn.",
+    "link": "https://vnexpress.net/chuyen-lan-tren-duong-cao-toc-the-nao-cho-an-toan-4862664.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để chuyển làn trên đường cao tốc một cách an toàn?",
     "answers": [
       {
-        "text": "Nghịch vòi nước nóng lạnh",
+        "text": "Kiểm tra gương và sử dụng tín hiệu trước khi chuyển làn",
         "correct": true
       },
       {
-        "text": "Chơi với lửa",
+        "text": "Chuyển làn ngay mà không cần kiểm tra",
         "correct": false
       },
       {
-        "text": "Ngã vào bếp",
+        "text": "Chạy nhanh hơn khi chuyển làn",
         "correct": false
       },
       {
-        "text": "Ngồi gần bếp lửa",
+        "text": "Không cần dùng tín hiệu khi chuyển làn",
         "correct": false
       }
     ]
@@ -3854,33 +3885,6 @@
     ]
   },
   {
-    "title": "Đồng hồ thông minh hỗ trợ người dùng nâng cao chất lượng sống",
-    "content": "Đồng hồ thông minh ngày càng trở thành công cụ hỗ trợ chăm sóc sức khỏe, giúp người dùng theo dõi thể chất, giấc ngủ và tối ưu hóa quá trình tập luyện. Theo báo cáo, 73% người dùng đồng hồ thông minh sử dụng các tính năng theo dõi sức khỏe để điều chỉnh cường độ tập luyện và phát hiện sớm các dấu hiệu bất thường. Garmin, một trong những thương hiệu hàng đầu, không ngừng cải tiến sản phẩm và phát triển các tính năng mới để đáp ứng nhu cầu của người dùng, góp phần nâng cao chất lượng sống.",
-    "link": "https://vnexpress.net/dong-ho-thong-minh-ho-tro-nguoi-dung-nang-cao-chat-luong-song-4863418.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Đồng hồ thông minh hỗ trợ người dùng nâng cao chất lượng sống như thế nào?",
-    "answers": [
-      {
-        "text": "Bằng cách theo dõi sức khỏe và cải thiện giấc ngủ.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ báo thời gian hàng ngày.",
-        "correct": false
-      },
-      {
-        "text": "Cung cấp thông tin thời tiết.",
-        "correct": false
-      },
-      {
-        "text": "Giúp người dùng giao tiếp tốt hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Điều trị hói đầu như thế nào?",
     "content": "Bài viết cung cấp thông tin về các phương pháp điều trị hói đầu, bao gồm sử dụng thuốc uống, thuốc xịt, liệu pháp tiêm PRP và laser 4D. Thời gian điều trị có thể từ 2-12 tháng tùy thuộc vào nguyên nhân và phương pháp được chọn. Nếu các phương pháp không hiệu quả, cấy tóc có thể là lựa chọn cuối cùng. Để đạt được kết quả tốt nhất, người bệnh nên tham khảo ý kiến bác sĩ chuyên khoa và thực hiện chế độ chăm sóc tóc hợp lý.",
     "link": "https://vnexpress.net/dieu-tri-hoi-dau-nhu-the-nao-4863306.html",
@@ -3934,6 +3938,33 @@
       },
       {
         "text": "Do di truyền",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đồng hồ thông minh hỗ trợ người dùng nâng cao chất lượng sống",
+    "content": "Đồng hồ thông minh ngày càng trở thành công cụ hỗ trợ chăm sóc sức khỏe, giúp người dùng theo dõi thể chất, giấc ngủ và tối ưu hóa quá trình tập luyện. Theo báo cáo, 73% người dùng đồng hồ thông minh sử dụng các tính năng theo dõi sức khỏe để điều chỉnh cường độ tập luyện và phát hiện sớm các dấu hiệu bất thường. Garmin, một trong những thương hiệu hàng đầu, không ngừng cải tiến sản phẩm và phát triển các tính năng mới để đáp ứng nhu cầu của người dùng, góp phần nâng cao chất lượng sống.",
+    "link": "https://vnexpress.net/dong-ho-thong-minh-ho-tro-nguoi-dung-nang-cao-chat-luong-song-4863418.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Đồng hồ thông minh hỗ trợ người dùng nâng cao chất lượng sống như thế nào?",
+    "answers": [
+      {
+        "text": "Bằng cách theo dõi sức khỏe và cải thiện giấc ngủ.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ báo thời gian hàng ngày.",
+        "correct": false
+      },
+      {
+        "text": "Cung cấp thông tin thời tiết.",
+        "correct": false
+      },
+      {
+        "text": "Giúp người dùng giao tiếp tốt hơn.",
         "correct": false
       }
     ]
@@ -4623,6 +4654,33 @@
     ]
   },
   {
+    "title": "Hai con của Từ Hy Viên vắng mặt trong tang lễ của mẹ",
+    "content": "Nữ diễn viên Từ Hy Viên đã qua đời và được an táng tại Nghĩa trang Kim Bảo Sơn ở Đài Loan. Tang lễ của cô diễn ra với sự tham gia của chồng hiện tại và gia đình, nhưng hai con của nữ diễn viên không có mặt. Mẹ kế của các con cho biết không nhận được thông báo về tang lễ, dẫn đến việc hai bé không thể tiễn đưa mẹ. Tình trạng này đã gây ra nhiều tranh cãi trên mạng xã hội.",
+    "link": "https://dantri.com.vn/giai-tri/hai-con-cua-tu-hy-vien-vang-mat-trong-tang-le-cua-me-20250319172644395.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao hai con của Từ Hy Viên không tham dự tang lễ của mẹ?",
+    "answers": [
+      {
+        "text": "Vì không nhận được thông báo về tang lễ.",
+        "correct": true
+      },
+      {
+        "text": "Vì các con đang ở Đài Loan.",
+        "correct": false
+      },
+      {
+        "text": "Vì các con không muốn đi.",
+        "correct": false
+      },
+      {
+        "text": "Vì các con đang ở với ông bà.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xu hướng 'nghỉ việc trả thù' của Gen Z Mỹ",
     "content": "Nhiều nhân viên Gen Z tại Mỹ đang theo xu hướng 'nghỉ việc trả thù', tức là họ cố tình xin nghỉ việc vào những thời điểm bận rộn nhất của công ty để gây rối loạn cho doanh nghiệp. Các nhân viên này thường nghỉ việc mà không thông báo trước, phản ánh sự bất mãn với cách quản lý và điều kiện làm việc. Theo khảo sát, 65% nhân viên cảm thấy mất động lực trong công việc, trong khi 83% Gen Z đang phải đối mặt với tình trạng kiệt sức, dẫn đến việc nghỉ việc như một cách phản kháng. Các chuyên gia khuyên rằng thay vì bỏ việc một cách bốc đồng, nhân viên nên tìm cách giao tiếp cởi mở với cấp trên.",
     "link": "https://vnexpress.net/xu-huong-nghi-viec-tra-thu-cua-gen-z-my-4863307.html",
@@ -4645,6 +4703,37 @@
       },
       {
         "text": "Chỉ đơn giản là thích nghỉ việc",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Học ngành nào để 4-5 năm nữa vẫn có việc làm?",
+    "content": "Bài viết đề cập đến nỗi lo lắng của học sinh và phụ huynh về việc chọn ngành học trong bối cảnh công nghệ AI đang phát triển mạnh mẽ. Nhiều ngành như tài chính, ngân hàng và truyền thông đối mặt với nguy cơ bị thay thế bởi AI, khiến các em lo ngại về cơ hội việc làm trong tương lai. Tuy nhiên, các chuyên gia khẳng định rằng công nghệ sẽ không hoàn toàn thay thế con người mà còn tạo ra nhiều cơ hội mới, và người học cần không ngừng cải thiện kỹ năng để thích ứng với thị trường lao động.",
+    "link": "https://dantri.com.vn/giao-duc/hoc-nganh-nao-de-4-5-nam-nua-van-co-viec-lam-20250319213313023.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Ngành học nào nên chọn để có việc làm trong 4-5 năm tới?",
+    "answers": [
+      {
+        "text": "Tài chính - ngân hàng",
+        "correct": true
+      },
+      {
+        "text": "Báo chí truyền thông",
+        "correct": false
+      },
+      {
+        "text": "Kỹ thuật phần mềm",
+        "correct": false
+      },
+      {
+        "text": "Nghệ thuật sáng tạo",
+        "correct": false
+      },
+      {
+        "text": "Y tế và công nghệ sinh học",
         "correct": false
       }
     ]
@@ -4699,64 +4788,6 @@
       },
       {
         "text": "Vì ông không đi khám định kỳ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hai con của Từ Hy Viên vắng mặt trong tang lễ của mẹ",
-    "content": "Nữ diễn viên Từ Hy Viên đã qua đời và được an táng tại Nghĩa trang Kim Bảo Sơn ở Đài Loan. Tang lễ của cô diễn ra với sự tham gia của chồng hiện tại và gia đình, nhưng hai con của nữ diễn viên không có mặt. Mẹ kế của các con cho biết không nhận được thông báo về tang lễ, dẫn đến việc hai bé không thể tiễn đưa mẹ. Tình trạng này đã gây ra nhiều tranh cãi trên mạng xã hội.",
-    "link": "https://dantri.com.vn/giai-tri/hai-con-cua-tu-hy-vien-vang-mat-trong-tang-le-cua-me-20250319172644395.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao hai con của Từ Hy Viên không tham dự tang lễ của mẹ?",
-    "answers": [
-      {
-        "text": "Vì không nhận được thông báo về tang lễ.",
-        "correct": true
-      },
-      {
-        "text": "Vì các con đang ở Đài Loan.",
-        "correct": false
-      },
-      {
-        "text": "Vì các con không muốn đi.",
-        "correct": false
-      },
-      {
-        "text": "Vì các con đang ở với ông bà.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Học ngành nào để 4-5 năm nữa vẫn có việc làm?",
-    "content": "Bài viết đề cập đến nỗi lo lắng của học sinh và phụ huynh về việc chọn ngành học trong bối cảnh công nghệ AI đang phát triển mạnh mẽ. Nhiều ngành như tài chính, ngân hàng và truyền thông đối mặt với nguy cơ bị thay thế bởi AI, khiến các em lo ngại về cơ hội việc làm trong tương lai. Tuy nhiên, các chuyên gia khẳng định rằng công nghệ sẽ không hoàn toàn thay thế con người mà còn tạo ra nhiều cơ hội mới, và người học cần không ngừng cải thiện kỹ năng để thích ứng với thị trường lao động.",
-    "link": "https://dantri.com.vn/giao-duc/hoc-nganh-nao-de-4-5-nam-nua-van-co-viec-lam-20250319213313023.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 9,
-    "question": "Ngành học nào nên chọn để có việc làm trong 4-5 năm tới?",
-    "answers": [
-      {
-        "text": "Tài chính - ngân hàng",
-        "correct": true
-      },
-      {
-        "text": "Báo chí truyền thông",
-        "correct": false
-      },
-      {
-        "text": "Kỹ thuật phần mềm",
-        "correct": false
-      },
-      {
-        "text": "Nghệ thuật sáng tạo",
-        "correct": false
-      },
-      {
-        "text": "Y tế và công nghệ sinh học",
         "correct": false
       }
     ]
