--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Co thắt tâm vị",
+    "content": "Co thắt tâm vị là tình trạng do tổn thương dây thần kinh điều khiển cơ vòng dưới thực quản, gây khó nuốt và ứ đọng thức ăn. Tỷ lệ mắc bệnh ước tính khoảng 10/100.000 người và thường gặp ở người trưởng thành từ 25-60 tuổi. Triệu chứng chính bao gồm khó nuốt, ợ nóng, đau ngực và giảm cân. Điều trị có thể bao gồm thuốc, can thiệp bằng bóng khí hoặc phẫu thuật.",
+    "link": "https://vnexpress.net/co-that-tam-vi-4856087.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Co thắt tâm vị là gì và triệu chứng của nó ra sao?",
+    "answers": [
+      {
+        "text": "Co thắt tâm vị là tình trạng khó nuốt do tổn thương dây thần kinh thực quản.",
+        "correct": true
+      },
+      {
+        "text": "Co thắt tâm vị chỉ xuất hiện ở người già.",
+        "correct": false
+      },
+      {
+        "text": "Co thắt tâm vị không có triệu chứng gì đặc biệt.",
+        "correct": false
+      },
+      {
+        "text": "Co thắt tâm vị chỉ ảnh hưởng đến nam giới.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Evra: 'Mọi thứ được sắp đặt để Messi giành World Cup 2022'",
     "content": "Cựu tuyển thủ Pháp Patrice Evra đã cáo buộc Lionel Messi và đội tuyển Argentina đã gian lận để giành chiến thắng tại World Cup 2022. Trong một cuộc phỏng vấn, Evra cho rằng mọi thứ đã được sắp đặt để Messi có thể nâng cao danh hiệu, ngay cả khi đội tuyển Pháp cũng muốn điều đó xảy ra. Ông nhấn mạnh rằng từ việc phạm lỗi dẫn đến quả phạt đền ở trận chung kết đến diễn biến trận đấu, có nhiều yếu tố cho thấy sự thiên lệch trong kết quả.",
     "link": "https://vnexpress.net/evra-moi-thu-duoc-sap-dat-de-messi-gianh-world-cup-2022-4863850.html",
@@ -917,37 +944,6 @@
     ]
   },
   {
-    "title": "Bệnh nấm phổi",
-    "content": "Bệnh nấm phổi là tình trạng nhiễm trùng do nấm xâm nhập vào phổi, phổ biến nhất là nấm aspergillus. Các triệu chứng bao gồm ho ra máu, khó thở, sốt kéo dài và đau ngực. Bệnh thường gặp ở những người có hệ miễn dịch yếu hoặc mắc các bệnh phổi mạn tính. Chẩn đoán bệnh qua các xét nghiệm cận lâm sàng, và điều trị sớm bằng thuốc kháng nấm có thể giúp người bệnh hồi phục.",
-    "link": "https://vnexpress.net/benh-nam-phoi-4863793.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Bệnh nấm phổi do loại nấm nào gây ra chủ yếu?",
-    "answers": [
-      {
-        "text": "Aspergillus",
-        "correct": true
-      },
-      {
-        "text": "Candida",
-        "correct": false
-      },
-      {
-        "text": "Cryptococcus",
-        "correct": false
-      },
-      {
-        "text": "Virus",
-        "correct": false
-      },
-      {
-        "text": "Bacteria",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Làm gì giảm cholesterol cao vào buổi tối?",
     "content": "Để giảm cholesterol cao vào buổi tối, ngoài việc tập thể dục và uống thuốc theo chỉ định của bác sĩ, người bệnh nên chú ý đến một số thói quen hàng đêm có thể giúp ngăn cholesterol tăng cao. Các thói quen này có thể bao gồm việc duy trì chế độ ăn uống lành mạnh, tránh thức khuya và giảm căng thẳng. Những thay đổi nhỏ trong thói quen sinh hoạt có thể mang lại lợi ích lớn cho sức khỏe tim mạch.",
     "link": "https://vnexpress.net/lam-gi-giam-cholesterol-cao-vao-buoi-toi-4863738.html",
@@ -974,6 +970,37 @@
       },
       {
         "text": "Ngủ ít hơn 7 giờ mỗi đêm",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bệnh nấm phổi",
+    "content": "Bệnh nấm phổi là tình trạng nhiễm trùng do nấm xâm nhập vào phổi, phổ biến nhất là nấm aspergillus. Các triệu chứng bao gồm ho ra máu, khó thở, sốt kéo dài và đau ngực. Bệnh thường gặp ở những người có hệ miễn dịch yếu hoặc mắc các bệnh phổi mạn tính. Chẩn đoán bệnh qua các xét nghiệm cận lâm sàng, và điều trị sớm bằng thuốc kháng nấm có thể giúp người bệnh hồi phục.",
+    "link": "https://vnexpress.net/benh-nam-phoi-4863793.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Bệnh nấm phổi do loại nấm nào gây ra chủ yếu?",
+    "answers": [
+      {
+        "text": "Aspergillus",
+        "correct": true
+      },
+      {
+        "text": "Candida",
+        "correct": false
+      },
+      {
+        "text": "Cryptococcus",
+        "correct": false
+      },
+      {
+        "text": "Virus",
+        "correct": false
+      },
+      {
+        "text": "Bacteria",
         "correct": false
       }
     ]
@@ -1899,37 +1926,6 @@
     ]
   },
   {
-    "title": "Australia 0-0 Indonesia (H1): Đội khách đá hỏng 11m",
-    "content": "Trận đấu giữa Australia và Indonesia diễn ra vào chiều 20/3/2025 đã kết thúc với tỷ số hòa 0-0. Indonesia đã có cơ hội ghi bàn từ chấm phạt đền nhưng hậu vệ Kevin Diks đã sút hỏng, bóng trúng cột dọc và không vào lưới. Dù Australia có lợi thế sân nhà nhưng không thể tận dụng tốt cơ hội để ghi bàn, và trận đấu kết thúc mà không có bàn thắng nào được ghi.",
-    "link": "https://vnexpress.net/australia-0-0-indonesia-h1-doi-khach-da-hong-11m-4863800.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Trận đấu giữa Australia và Indonesia kết thúc với tỷ số nào?",
-    "answers": [
-      {
-        "text": "0-0",
-        "correct": true
-      },
-      {
-        "text": "1-0",
-        "correct": false
-      },
-      {
-        "text": "2-1",
-        "correct": false
-      },
-      {
-        "text": "3-2",
-        "correct": false
-      },
-      {
-        "text": "0-1",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Australia - Indonesia: Đội khách tung 10 cầu thủ lai đá chính",
     "content": "Trong trận đấu tại vòng loại World Cup 2026 khu vực châu Á, đội tuyển Indonesia đã quyết định tung ra đội hình xuất phát với 10 cầu thủ mang dòng máu lai, chỉ duy nhất một cầu thủ bản địa là Marselino Ferdinan. Đội hình của Indonesia sử dụng sơ đồ 3-5-2 với Maarten Paes trong khung gỗ và bộ ba trung vệ gồm Mees Hilgers, Jay Idzes, và Dean James. Trong khi đó, Australia cũng đã công bố đội hình 3-4-3 với sự trở lại của thủ môn Matthew Ryan.",
     "link": "https://vnexpress.net/australia-indonesia-doi-khach-tung-10-cau-thu-lai-da-chinh-4863800.html",
@@ -1956,6 +1952,37 @@
       },
       {
         "text": "5",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Australia 0-0 Indonesia (H1): Đội khách đá hỏng 11m",
+    "content": "Trận đấu giữa Australia và Indonesia diễn ra vào chiều 20/3/2025 đã kết thúc với tỷ số hòa 0-0. Indonesia đã có cơ hội ghi bàn từ chấm phạt đền nhưng hậu vệ Kevin Diks đã sút hỏng, bóng trúng cột dọc và không vào lưới. Dù Australia có lợi thế sân nhà nhưng không thể tận dụng tốt cơ hội để ghi bàn, và trận đấu kết thúc mà không có bàn thắng nào được ghi.",
+    "link": "https://vnexpress.net/australia-0-0-indonesia-h1-doi-khach-da-hong-11m-4863800.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Trận đấu giữa Australia và Indonesia kết thúc với tỷ số nào?",
+    "answers": [
+      {
+        "text": "0-0",
+        "correct": true
+      },
+      {
+        "text": "1-0",
+        "correct": false
+      },
+      {
+        "text": "2-1",
+        "correct": false
+      },
+      {
+        "text": "3-2",
+        "correct": false
+      },
+      {
+        "text": "0-1",
         "correct": false
       }
     ]
@@ -2139,33 +2166,6 @@
     ]
   },
   {
-    "title": "10 năm không con do dính buồng tử cung",
-    "content": "Chị Hà Thu, 33 tuổi, đã trải qua 10 năm không có con do dính buồng tử cung sau nhiều lần sảy thai và tác động phẫu thuật. Sau khi được chẩn đoán vô sinh thứ phát do dính buồng tử cung và tắc vòi trứng, chị đã trải qua ca phẫu thuật nội soi để cắt dính và điều trị. Cuối cùng, nhờ thụ tinh ống nghiệm, chị đã sinh con gái đầu lòng sau nhiều nỗ lực và gặp nhiều khó khăn trong thai kỳ.",
-    "link": "https://vnexpress.net/10-nam-khong-con-do-dinh-buong-tu-cung-4863585.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Chị Hà Thu đã phải đối mặt với vấn đề gì trong suốt 10 năm không có con?",
-    "answers": [
-      {
-        "text": "Dính buồng tử cung",
-        "correct": true
-      },
-      {
-        "text": "Vô sinh do tuổi tác",
-        "correct": false
-      },
-      {
-        "text": "Bệnh lý di truyền",
-        "correct": false
-      },
-      {
-        "text": "Thiếu hụt hormone",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vietjet khai trương hai đường bay mới đến Ấn Độ",
     "content": "Vietjet vừa khai trương hai đường bay mới đến Ấn Độ, cụ thể là từ TP.HCM đến Hyderabad và Bengaluru, nhằm đáp ứng nhu cầu di chuyển của người dân và du khách. Đường bay đến Hyderabad bắt đầu từ ngày 18-3-2025 với 2 chuyến khứ hồi mỗi tuần, trong khi đường bay đến Bengaluru khai trương từ 19-3-2025 với 3 chuyến khứ hồi mỗi tuần. Với sự kiện này, Vietjet nâng tổng số đường bay giữa Việt Nam và Ấn Độ lên 10, góp phần thúc đẩy giao lưu văn hóa và du lịch giữa hai nước.",
     "link": "https://tuoitre.vn/vietjet-khai-truong-hai-duong-bay-moi-den-an-do-20250320145514184.htm",
@@ -2188,6 +2188,33 @@
       },
       {
         "text": "Hà Nội - Mumbai và Hà Nội - Ahmedabad",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "10 năm không con do dính buồng tử cung",
+    "content": "Chị Hà Thu, 33 tuổi, đã trải qua 10 năm không có con do dính buồng tử cung sau nhiều lần sảy thai và tác động phẫu thuật. Sau khi được chẩn đoán vô sinh thứ phát do dính buồng tử cung và tắc vòi trứng, chị đã trải qua ca phẫu thuật nội soi để cắt dính và điều trị. Cuối cùng, nhờ thụ tinh ống nghiệm, chị đã sinh con gái đầu lòng sau nhiều nỗ lực và gặp nhiều khó khăn trong thai kỳ.",
+    "link": "https://vnexpress.net/10-nam-khong-con-do-dinh-buong-tu-cung-4863585.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Chị Hà Thu đã phải đối mặt với vấn đề gì trong suốt 10 năm không có con?",
+    "answers": [
+      {
+        "text": "Dính buồng tử cung",
+        "correct": true
+      },
+      {
+        "text": "Vô sinh do tuổi tác",
+        "correct": false
+      },
+      {
+        "text": "Bệnh lý di truyền",
+        "correct": false
+      },
+      {
+        "text": "Thiếu hụt hormone",
         "correct": false
       }
     ]
