Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,60 @@
     */
     const newsData = [
   {
+    "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
+    "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
+    "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao thực phẩm chức năng không thể thay thế thuốc chữa bệnh?",
+    "answers": [
+      {
+        "text": "Thực phẩm chức năng chỉ hỗ trợ sức khỏe, không có tác dụng chữa bệnh.",
+        "correct": true
+      },
+      {
+        "text": "Thực phẩm chức năng có thể gây ngộ độc.",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chức năng luôn an toàn cho sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chức năng không cần kiểm tra nguồn gốc.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Có nên loại bỏ lớp váng bọt nổi trên nồi lẩu?",
+    "content": "Khi chế biến món lẩu, lớp bọt nổi trên bề mặt thường do protein, chất béo và khoáng chất trong thực phẩm gây ra. Việc loại bỏ lớp bọt này không cần thiết vì không gây hại và còn có thể làm mất đi một phần protein. Tuy nhiên, cần phân biệt giữa bọt bình thường và bọt do thực phẩm không đảm bảo chất lượng. Nếu bọt có màu sắc bất thường hoặc vón cục lớn, có thể là dấu hiệu thực phẩm không an toàn. Tổng quan, lớp bọt trắng nhỏ không ảnh hưởng đến chất lượng món ăn và có thể giữ lại.",
+    "link": "https://vnexpress.net/co-nen-loai-bo-lop-vang-bot-noi-tren-noi-lau-4863369.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có nên loại bỏ lớp bọt nổi trên nồi lẩu không?",
+    "answers": [
+      {
+        "text": "Không, lớp bọt này chứa dưỡng chất có lợi.",
+        "correct": true
+      },
+      {
+        "text": "Có, lớp bọt này hoàn toàn không tốt.",
+        "correct": false
+      },
+      {
+        "text": "Có, nên loại bỏ để món ăn ngon hơn.",
+        "correct": false
+      },
+      {
+        "text": "Không, lớp bọt này cần phải được hớt bỏ mỗi lần nấu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hà Nội tiếp tục nghiên cứu đưa nước sông Hồng về sông Tô Lịch",
     "content": "Chính quyền Hà Nội đang nghiên cứu phương án bổ sung nước từ sông Hồng vào sông Tô Lịch nhằm cải thiện chất lượng nước và môi trường sống cho người dân. Dự kiến, việc nghiên cứu sẽ hoàn thành trước ngày 20/8, với mục tiêu kết nối hệ thống thu gom nước thải và phục hồi dòng sông ô nhiễm này. Dự án đã nhận được nhiều ý kiến từ các bộ ngành và các tổ chức khoa học, đòi hỏi sự cân nhắc kỹ lưỡng trước khi triển khai.",
     "link": "https://vnexpress.net/ha-noi-tiep-tuc-nghien-cuu-dua-nuoc-song-hong-ve-song-to-lich-4863931.html",
@@ -2307,37 +2361,6 @@
     ]
   },
   {
-    "title": "Australia - Indonesia: Đội khách tung 10 cầu thủ lai đá chính",
-    "content": "Trong trận đấu tại vòng loại World Cup 2026 khu vực châu Á, đội tuyển Indonesia đã quyết định tung ra đội hình xuất phát với 10 cầu thủ mang dòng máu lai, chỉ duy nhất một cầu thủ bản địa là Marselino Ferdinan. Đội hình của Indonesia sử dụng sơ đồ 3-5-2 với Maarten Paes trong khung gỗ và bộ ba trung vệ gồm Mees Hilgers, Jay Idzes, và Dean James. Trong khi đó, Australia cũng đã công bố đội hình 3-4-3 với sự trở lại của thủ môn Matthew Ryan.",
-    "link": "https://vnexpress.net/australia-indonesia-doi-khach-tung-10-cau-thu-lai-da-chinh-4863800.html",
-    "cat": "the-thao",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Đội hình xuất phát của Indonesia trong trận gặp Australia có bao nhiêu cầu thủ bản địa?",
-    "answers": [
-      {
-        "text": "1",
-        "correct": true
-      },
-      {
-        "text": "2",
-        "correct": false
-      },
-      {
-        "text": "3",
-        "correct": false
-      },
-      {
-        "text": "4",
-        "correct": false
-      },
-      {
-        "text": "5",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Australia 0-0 Indonesia (H1): Đội khách đá hỏng 11m",
     "content": "Trận đấu giữa Australia và Indonesia diễn ra vào chiều 20/3/2025 đã kết thúc với tỷ số hòa 0-0. Indonesia đã có cơ hội ghi bàn từ chấm phạt đền nhưng hậu vệ Kevin Diks đã sút hỏng, bóng trúng cột dọc và không vào lưới. Dù Australia có lợi thế sân nhà nhưng không thể tận dụng tốt cơ hội để ghi bàn, và trận đấu kết thúc mà không có bàn thắng nào được ghi.",
     "link": "https://vnexpress.net/australia-0-0-indonesia-h1-doi-khach-da-hong-11m-4863800.html",
@@ -2364,6 +2387,37 @@
       },
       {
         "text": "0-1",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Australia - Indonesia: Đội khách tung 10 cầu thủ lai đá chính",
+    "content": "Trong trận đấu tại vòng loại World Cup 2026 khu vực châu Á, đội tuyển Indonesia đã quyết định tung ra đội hình xuất phát với 10 cầu thủ mang dòng máu lai, chỉ duy nhất một cầu thủ bản địa là Marselino Ferdinan. Đội hình của Indonesia sử dụng sơ đồ 3-5-2 với Maarten Paes trong khung gỗ và bộ ba trung vệ gồm Mees Hilgers, Jay Idzes, và Dean James. Trong khi đó, Australia cũng đã công bố đội hình 3-4-3 với sự trở lại của thủ môn Matthew Ryan.",
+    "link": "https://vnexpress.net/australia-indonesia-doi-khach-tung-10-cau-thu-lai-da-chinh-4863800.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Đội hình xuất phát của Indonesia trong trận gặp Australia có bao nhiêu cầu thủ bản địa?",
+    "answers": [
+      {
+        "text": "1",
+        "correct": true
+      },
+      {
+        "text": "2",
+        "correct": false
+      },
+      {
+        "text": "3",
+        "correct": false
+      },
+      {
+        "text": "4",
+        "correct": false
+      },
+      {
+        "text": "5",
         "correct": false
       }
     ]
@@ -4096,28 +4150,28 @@
     ]
   },
   {
-    "title": "Bé gái bỏng do nghịch vòi nước nóng lạnh",
-    "content": "Bé Hà, 3 tuổi, đã bị bỏng do nghịch vòi nước nóng lạnh trong khi tắm, dẫn đến bỏng ở lưng và mông. Sau khi được điều trị tại bệnh viện Đa khoa Tâm Anh TP HCM, bé hồi phục tốt sau 4 ngày điều trị với vết thương đã lên da non. Bác sĩ khuyến cáo phụ huynh cần cẩn trọng trong việc phòng ngừa bỏng cho trẻ nhỏ, đồng thời hướng dẫn cách sơ cứu khi trẻ bị bỏng.",
-    "link": "https://vnexpress.net/be-gai-bong-do-nghich-voi-nuoc-nong-lanh-4863556.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bé Hà bị bỏng do nguyên nhân gì?",
+    "title": "Chuyển làn trên đường cao tốc thế nào cho an toàn",
+    "content": "Khi lái xe trên đường cao tốc, việc chuyển làn an toàn là rất quan trọng và cần phải thực hiện đúng cách. Tài xế cần kiểm tra gương chiếu hậu và điểm mù trước khi chuyển làn, đồng thời sử dụng tín hiệu để báo hiệu ý định của mình. Khi đã đảm bảo an toàn, hãy chuyển làn từ từ và giữ khoảng cách với các xe xung quanh để tránh tai nạn.",
+    "link": "https://vnexpress.net/chuyen-lan-tren-duong-cao-toc-the-nao-cho-an-toan-4862664.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để chuyển làn trên đường cao tốc một cách an toàn?",
     "answers": [
       {
-        "text": "Nghịch vòi nước nóng lạnh",
+        "text": "Kiểm tra gương và sử dụng tín hiệu trước khi chuyển làn",
         "correct": true
       },
       {
-        "text": "Chơi với lửa",
+        "text": "Chuyển làn ngay mà không cần kiểm tra",
         "correct": false
       },
       {
-        "text": "Ngã vào bếp",
+        "text": "Chạy nhanh hơn khi chuyển làn",
         "correct": false
       },
       {
-        "text": "Ngồi gần bếp lửa",
+        "text": "Không cần dùng tín hiệu khi chuyển làn",
         "correct": false
       }
     ]
@@ -4150,28 +4204,28 @@
     ]
   },
   {
-    "title": "Chuyển làn trên đường cao tốc thế nào cho an toàn",
-    "content": "Khi lái xe trên đường cao tốc, việc chuyển làn an toàn là rất quan trọng và cần phải thực hiện đúng cách. Tài xế cần kiểm tra gương chiếu hậu và điểm mù trước khi chuyển làn, đồng thời sử dụng tín hiệu để báo hiệu ý định của mình. Khi đã đảm bảo an toàn, hãy chuyển làn từ từ và giữ khoảng cách với các xe xung quanh để tránh tai nạn.",
-    "link": "https://vnexpress.net/chuyen-lan-tren-duong-cao-toc-the-nao-cho-an-toan-4862664.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để chuyển làn trên đường cao tốc một cách an toàn?",
+    "title": "Bé gái bỏng do nghịch vòi nước nóng lạnh",
+    "content": "Bé Hà, 3 tuổi, đã bị bỏng do nghịch vòi nước nóng lạnh trong khi tắm, dẫn đến bỏng ở lưng và mông. Sau khi được điều trị tại bệnh viện Đa khoa Tâm Anh TP HCM, bé hồi phục tốt sau 4 ngày điều trị với vết thương đã lên da non. Bác sĩ khuyến cáo phụ huynh cần cẩn trọng trong việc phòng ngừa bỏng cho trẻ nhỏ, đồng thời hướng dẫn cách sơ cứu khi trẻ bị bỏng.",
+    "link": "https://vnexpress.net/be-gai-bong-do-nghich-voi-nuoc-nong-lanh-4863556.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé Hà bị bỏng do nguyên nhân gì?",
     "answers": [
       {
-        "text": "Kiểm tra gương và sử dụng tín hiệu trước khi chuyển làn",
+        "text": "Nghịch vòi nước nóng lạnh",
         "correct": true
       },
       {
-        "text": "Chuyển làn ngay mà không cần kiểm tra",
+        "text": "Chơi với lửa",
         "correct": false
       },
       {
-        "text": "Chạy nhanh hơn khi chuyển làn",
+        "text": "Ngã vào bếp",
         "correct": false
       },
       {
-        "text": "Không cần dùng tín hiệu khi chuyển làn",
+        "text": "Ngồi gần bếp lửa",
         "correct": false
       }
     ]
@@ -5147,6 +5201,60 @@
     ]
   },
   {
+    "title": "Phân khúc CUV cỡ C - Territory và CX-5 bỏ xa phần còn lại",
+    "content": "Trong phân khúc CUV cỡ C, Mazda CX-5 và Ford Territory đang chiếm ưu thế vượt trội với tổng doanh số gần 60% thị phần. Trong hai tháng đầu năm 2025, CX-5 vẫn dẫn đầu với 923 xe bán ra, trong khi Territory theo sau nhưng vẫn còn khoảng cách lớn. Các đối thủ như Honda CR-V, Hyundai Tucson và Kia Sportage ghi nhận doanh số thấp hơn nhiều, cho thấy sự thống trị của CX-5 và Territory.",
+    "link": "https://vnexpress.net/phan-khuc-cuv-co-c-territory-va-cx-5-bo-xa-phan-con-lai-4863304.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao CX-5 và Territory lại chiếm ưu thế trong phân khúc CUV cỡ C?",
+    "answers": [
+      {
+        "text": "CX-5 và Territory có doanh số cao và thị phần lớn.",
+        "correct": true
+      },
+      {
+        "text": "Các đối thủ đều có doanh số tốt hơn.",
+        "correct": false
+      },
+      {
+        "text": "CX-5 không còn sản xuất nữa.",
+        "correct": false
+      },
+      {
+        "text": "Territory là mẫu xe mới nhất trên thị trường.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khai mạc Liên hoan Truyền hình toàn quốc lần thứ 42",
+    "content": "Tối 19/3, Liên hoan Truyền hình toàn quốc lần thứ 42 đã chính thức khai mạc tại thành phố Quy Nhơn, tỉnh Bình Định, quy tụ gần 100 đơn vị truyền hình và báo chí với 734 tác phẩm dự thi. Sự kiện này không chỉ tôn vinh các tác phẩm truyền hình xuất sắc mà còn tạo cơ hội cho các nhà báo giao lưu và nâng cao nghiệp vụ. Ông Phạm Anh Tuấn, Chủ tịch UBND tỉnh Bình Định, nhấn mạnh đây là dịp quảng bá hình ảnh văn hóa và tiềm năng phát triển của tỉnh. Liên hoan cũng bao gồm nhiều hoạt động bên lề và chương trình thiện nguyện, thể hiện tinh thần trách nhiệm xã hội của những người làm truyền hình.",
+    "link": "https://dantri.com.vn/giai-tri/khai-mac-lien-hoan-truyen-hinh-toan-quoc-lan-thu-42-20250320101242970.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Liên hoan Truyền hình toàn quốc lần thứ 42 được tổ chức ở đâu và khi nào?",
+    "answers": [
+      {
+        "text": "Quy Nhơn, vào ngày 19/3",
+        "correct": true
+      },
+      {
+        "text": "Hà Nội, vào ngày 19/3",
+        "correct": false
+      },
+      {
+        "text": "Đà Nẵng, vào ngày 20/3",
+        "correct": false
+      },
+      {
+        "text": "Hải Phòng, vào ngày 19/3",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Học ngành nào để 4-5 năm nữa vẫn có việc làm?",
     "content": "Bài viết đề cập đến nỗi lo lắng của học sinh và phụ huynh về việc chọn ngành học trong bối cảnh công nghệ AI đang phát triển mạnh mẽ. Nhiều ngành như tài chính, ngân hàng và truyền thông đối mặt với nguy cơ bị thay thế bởi AI, khiến các em lo ngại về cơ hội việc làm trong tương lai. Tuy nhiên, các chuyên gia khẳng định rằng công nghệ sẽ không hoàn toàn thay thế con người mà còn tạo ra nhiều cơ hội mới, và người học cần không ngừng cải thiện kỹ năng để thích ứng với thị trường lao động.",
     "link": "https://dantri.com.vn/giao-duc/hoc-nganh-nao-de-4-5-nam-nua-van-co-viec-lam-20250319213313023.htm",
@@ -5173,33 +5281,6 @@
       },
       {
         "text": "Y tế và công nghệ sinh học",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Phân khúc CUV cỡ C - Territory và CX-5 bỏ xa phần còn lại",
-    "content": "Trong phân khúc CUV cỡ C, Mazda CX-5 và Ford Territory đang chiếm ưu thế vượt trội với tổng doanh số gần 60% thị phần. Trong hai tháng đầu năm 2025, CX-5 vẫn dẫn đầu với 923 xe bán ra, trong khi Territory theo sau nhưng vẫn còn khoảng cách lớn. Các đối thủ như Honda CR-V, Hyundai Tucson và Kia Sportage ghi nhận doanh số thấp hơn nhiều, cho thấy sự thống trị của CX-5 và Territory.",
-    "link": "https://vnexpress.net/phan-khuc-cuv-co-c-territory-va-cx-5-bo-xa-phan-con-lai-4863304.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao CX-5 và Territory lại chiếm ưu thế trong phân khúc CUV cỡ C?",
-    "answers": [
-      {
-        "text": "CX-5 và Territory có doanh số cao và thị phần lớn.",
-        "correct": true
-      },
-      {
-        "text": "Các đối thủ đều có doanh số tốt hơn.",
-        "correct": false
-      },
-      {
-        "text": "CX-5 không còn sản xuất nữa.",
-        "correct": false
-      },
-      {
-        "text": "Territory là mẫu xe mới nhất trên thị trường.",
         "correct": false
       }
     ]
@@ -5281,33 +5362,6 @@
       },
       {
         "text": "Chỉ đơn giản là thích nghỉ việc",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Khai mạc Liên hoan Truyền hình toàn quốc lần thứ 42",
-    "content": "Tối 19/3, Liên hoan Truyền hình toàn quốc lần thứ 42 đã chính thức khai mạc tại thành phố Quy Nhơn, tỉnh Bình Định, quy tụ gần 100 đơn vị truyền hình và báo chí với 734 tác phẩm dự thi. Sự kiện này không chỉ tôn vinh các tác phẩm truyền hình xuất sắc mà còn tạo cơ hội cho các nhà báo giao lưu và nâng cao nghiệp vụ. Ông Phạm Anh Tuấn, Chủ tịch UBND tỉnh Bình Định, nhấn mạnh đây là dịp quảng bá hình ảnh văn hóa và tiềm năng phát triển của tỉnh. Liên hoan cũng bao gồm nhiều hoạt động bên lề và chương trình thiện nguyện, thể hiện tinh thần trách nhiệm xã hội của những người làm truyền hình.",
-    "link": "https://dantri.com.vn/giai-tri/khai-mac-lien-hoan-truyen-hinh-toan-quoc-lan-thu-42-20250320101242970.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Liên hoan Truyền hình toàn quốc lần thứ 42 được tổ chức ở đâu và khi nào?",
-    "answers": [
-      {
-        "text": "Quy Nhơn, vào ngày 19/3",
-        "correct": true
-      },
-      {
-        "text": "Hà Nội, vào ngày 19/3",
-        "correct": false
-      },
-      {
-        "text": "Đà Nẵng, vào ngày 20/3",
-        "correct": false
-      },
-      {
-        "text": "Hải Phòng, vào ngày 19/3",
         "correct": false
       }
     ]
